--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 安卓下载地址：<a href="https://static.lzbcl.com/download/2106.html" target="_blank" tppabs="">点击下载</a><br>
 <br>
 
-苹果下载地址：<a href="https://itunes.apple.com/app/apple-store/id961569488?pt=666337&ct=wslm1&mt=8" target="_blank" tppabs="">点击下载</a><br>
+苹果下载地址：<a href="https://static.lzbcl.com/download/2041.html" target="_blank" tppabs="">点击下载</a><br>
 
 <br>
 <span class="wrap pbimgwapper"><img class="BDE_Image" src="seo/timg(3).gif"></span>                        </div>                    
@@ -61,7 +61,7 @@
 安卓下载地址：<a href="https://static.lzbcl.com/download/2106.html" target="_blank" tppabs="">点击下载</a><br>
 <br>
 
-苹果下载地址：<a href="https://itunes.apple.com/app/apple-store/id961569488?pt=666337&ct=wslm1&mt=8" target="_blank" tppabs="">点击下载</a><br>
+苹果下载地址：<a href="https://static.lzbcl.com/download/2041.html" target="_blank" tppabs="">点击下载</a><br>
 
 <br>
 	                    <div class="fr_list j_floor_panel" style="display: none;" data-list-count="0"> </div>
