--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 安卓下载地址：<a href="https://t.dreamlive.net/s/i?c=h_wscpa015&p=10&t=0.2" target="_blank" tppabs="">点击下载</a><br>
 <br>
 
-苹果下载地址：<a href="https://t.dreamlive.net/s/i?c=h_wscpa105&p=10&t=0.2" target="_blank" tppabs="">点击下载</a><br>
+苹果下载地址：<a href="https://static.lzbcl.com/download/2018.html" target="_blank" tppabs="">点击下载</a><br>
 
 <br>
 <span class="wrap pbimgwapper"><img class="BDE_Image" src="seo/timg(3).gif"></span>                        </div>                    
@@ -61,7 +61,7 @@
 安卓下载地址：<a href="https://t.dreamlive.net/s/i?c=h_wscpa015&p=10&t=0.2" target="_blank" tppabs="">点击下载</a><br>
 <br>
 
-苹果下载地址：<a href="https://t.dreamlive.net/s/i?c=h_wscpa105&p=10&t=0.2" target="_blank" tppabs="">点击下载</a><br>
+苹果下载地址：<a href="https://static.lzbcl.com/download/2018.html" target="_blank" tppabs="">点击下载</a><br>
 
 <br>
 	                    <div class="fr_list j_floor_panel" style="display: none;" data-list-count="0"> </div>
