--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span id="g-black-bg"></span>
         <span id="g-look-desc">点击查看</span>
     </div>
-    <div class="ktag"><a href="http://www.yjdzz.com/apk9/9800056.apk"><h3>安卓下载</h3></a><a href="https://static.lzbcl.com/download/2018.html"><h3>苹果下载</h3></a></div>
+    <div class="ktag"><a href="http://d6.youyi520.com/a/c/50/daren_50080.apk"><h3>安卓下载</h3></a><a href="http://www.xxhszx.com/spread/iosspread.php?channel=i200713&41180"><h3>苹果下载</h3></a></div>
         <div id="moreList" class="zq-game"> 
     <div class="hd"><h2><span>软件介绍</span></h2>
       <p>&nbsp;</p>
